2006-11-07  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (HILDON_DEPENDS): Add libgtkhtml-3.8, libosso,
	libossomime, hildon-base-lib and hildon-fm.

2006-11-07  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.20~.

2006-10-10  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.19.

2006-10-10  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/Makefile.am (maemo_booster_null_so_CFLAGS): New variable.
	(maemo_booster_gtk_so_CFLAGS): Likewise.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/summoner.c: Include <unistd.h>. Remove commented out
	<sys/resource.h> include.
	* launcher/prog.c: Include <stdlib.h>.
	* launcher/booster.c: Likewise.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Bump version to 0.19~.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.18.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (AC_CONFIG_FILES): Generate maemo-summoner.1.
	* launcher/launcher.c: Do not include <sys/prctl.h> nor <dlfcn.h>
	anymore. Include 'prog.h'.
	(entry_t, prog_t): Move type definitions to ...
	* launcher/prog.h: ... here. New file.
	(prog_t): Likewise.
	* launcher/launcher.c (environment, print_prog_env_argv, load_main)
	(set_process_name, set_progname): Move declarations to ...
	* launcher/prog.c: ... here. New file.
	* launcher/summoner.c: New file.
	* launcher/summoner.1.in: Likewise.
	* launcher/Makefile.am (bin_PROGRAMS): Add maemo-summoner.
	(maemo_launcher_SOURCES): Add 'prog.c' and 'prog.h'.
	(maemo_summoner_SOURCES): New variable.
	(maemo_summoner_CPPFLAGS): Likewise.
	(maemo_summoner_LDADD): Likewise.
	(dist_man_MANS): Add maemo-summoner.1.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (launch_process): Move program environment and
	argv debugging prints to ...
	(print_prog_env_argv): ... here. New function.

2006-09-28  Guillem Jover  <guillem.jover@nokia.com>
